Feat(TaskForm): Add select input and form validation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -28,6 +28,9 @@
       ],
       "@components/*": [
         "./src/app/components/*"
+      ],
+      "@lib/*": [
+        "./src/lib/*"
       ]
     }
   },
